--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.username=learn_center
+spring.datasource.password=learn_center
+spring.datasource.url=jdbc:postgresql://localhost:5432/learn_center
