--- a/build.gradle
+++ b/build.gradle
@@ -18,8 +18,10 @@ dependencies {
     annotationProcessor('org.hibernate:hibernate-jpamodelgen')
     implementation 'org.jetbrains:annotations:19.0.0'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.security:spring-security-test'
 	implementation 'javax.validation:validation-api'
 	implementation 'org.hibernate:hibernate-jpamodelgen'
 	runtimeOnly 'org.postgresql:postgresql'
