Implement teacher page

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=learn_center
 spring.datasource.password=learn_center
 spring.datasource.url=jdbc:postgresql://localhost:5432/learn_center
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
