--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+# suppress inspection "UnusedProperty" for whole file
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=learn_center
 spring.datasource.password=learn_center
